# muse

./: .gitignore  CLAUDE.md  Cargo.toml  Package.swift  README.md  TODO.md  build.rs  justfile
Sources/: App.swift  Models.swift  MusicController.swift  Screen.swift  SixelArt.swift  Terminal.swift  Theme.swift
src/: backend.rs  bridge.rs  lastfm.rs  main.rs  playlist.rs  spotify.rs  state.rs  theme.rs  ui.rs
swift-bridge/: MusicBridge.swift
themes/: classic.toml  fire.toml  matrix.toml  monochrome.toml  ocean.toml  purple.toml  sunset.toml  synthwave.toml  tokyo-night-moon.toml
