[package]
name = "muse"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
unicode-width = "0.2"
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"

# Spotify backend
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
