[package]
name = "muse"
version = "0.1.0"
edition = "2021"

[features]
default = ["apple-music", "spotify"]
apple-music = []
spotify = ["dep:ureq", "dep:serde", "dep:serde_json"]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
unicode-width = "0.2"
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
toml = "0.8"

# Spotify backend (optional)
ureq = { version = "2", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
